--- a/index.html
+++ b/index.html
@@ -32,5 +32,12 @@
                 cursor: pointer;
             }
         </style>
+        <div>
+            <h3>Вход через соц. сети</h3>
+            <button>Facebook</button>
+            <button>Google</button>
+            <button>VK</button>
+        </div>
+
 </body>
 </html>
